# IApp

./: .gitignore
backend/: .env.template  .gitignore  Makefile  Pipfile  README.md  alembic.ini  pyproject.toml  setup.py
backend/batch/tests/: get_tweet_from_repo.py  tweet_crawl_repository.py  tweet_crawl_service.py  twitter_follower_crawl_repository.py  twitter_tweet_crawl.py  twitter_user_crawl.py  twitter_user_crawl_repository.py  twitter_user_crawl_service.py
backend/config.template/: aws.yml  data_location.yml  dev.yml  newsapi.yml  twitter.yml
backend/iapp/: settings.py
backend/iapp/aws/: resource.py
backend/iapp/crawler/: __init__.py  base_crawler.py  callback.py
backend/iapp/crawler/company_announcement/: company_announcement_crawler.py
backend/iapp/crawler/company_financials/: yfinance.py
backend/iapp/crawler/economic_indicators/: fred.py
backend/iapp/crawler/google_trends/: google_trends_crawler.py
backend/iapp/crawler/stockprice/: __init__.py  kabuoji.py  stooq.py  yfinance.py
backend/iapp/crawler/twitter/: __init__.py  account_pool.py  api.py  keyword_crawler.py  trend_crawler.py  tweepy_crawler.py  (+3 more)
backend/iapp/db/: db.py  dynamodb.py  rdb.py
backend/iapp/repository/: repositories.py  repository.py
backend/iapp/server/: server.py
backend/iapp/storage/: __init__.py  dynamodb.py  s3.py  storage.py
backend/iapp/utils/: config.py
backend/lambda/object_detection/: .env.template  README.md  api.py  serverless.yaml
backend/migrations/: env.py
backend/server/: api_server.py
backend/tests/crawler/: test_twitter_crawler.py
(+100 files in other folders)
