[tool.poetry]
name = "iapp-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "iapp" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
boto3 = "^1.24.82"
fastapi-cloudauth = "^0.4.3"
SQLAlchemy = "^1.4.41"
mysqlclient = "^2.1.1"
SQLAlchemy-Utils = "^0.38.3"
pandas = "^1.5.0"
pandas-datareader = "^0.10.0"
yfinance = "^0.1.74"
timeout-decorator = "^0.5.0"
pytrends = "^4.8.0"
schedule = "^1.1.0"
PyYAML = "^6.0"
tweepy = "3.8.0"
flake8 = "^5.0.4"
black = "^22.10.0"
alembic = "^1.8.1"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
